fix: harden trace artifact lifecycle