@@ -1,11 +1,7 @@
 package dev.gdx.uiharness.core.trace;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import dev.gdx.uiharness.core.model.SemanticSnapshot;
 import java.io.IOException;
-import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -23,6 +19,7 @@ public record TraceEvent(
         Map<String, String> evidence) {
     static final int MAX_TEXT_LENGTH = 16_384;
     static final int MAX_EVIDENCE_ENTRIES = 256;
+    static final int MAX_ENCODED_BYTES = 1_048_576;
 
     /** Supported lifecycle evidence kinds. */
     public enum Kind {
@@ -101,110 +98,12 @@ public record TraceEvent(
                 parentSequence, sanitizedEvidence);
     }
 
-    byte[] toJson(ObjectMapper mapper) throws IOException {
-        ObjectNode object = mapper.createObjectNode();
-        object.put("sequence", sequence);
-        object.put("kind", kind.name());
-        object.put("sessionId", sessionId);
-        if (requestId == null) {
-            object.putNull("requestId");
-        } else {
-            object.put("requestId", requestId);
-        }
-        object.put("logicalTime", logicalTime);
-        putNullable(object, "frame", frame);
-        putNullable(object, "revision", revision);
-        putNullable(object, "parentSequence", parentSequence);
-        ObjectNode evidenceNode = object.putObject("evidence");
-        evidence.forEach(evidenceNode::put);
-        return mapper.writeValueAsBytes(object);
+    byte[] toJson() {
+        return TraceJson.encodeEvent(this);
     }
 
-    static TraceEvent fromJson(ObjectMapper mapper, byte[] json) throws IOException {
-        JsonNode object = mapper.readTree(json);
-        if (object == null || !object.isObject()) {
-            throw new IOException("event must be a JSON object");
-        }
-        Map<String, String> evidence = new LinkedHashMap<>();
-        JsonNode evidenceNode = required(object, "evidence");
-        if (!evidenceNode.isObject()) {
-            throw new IOException("event evidence must be an object");
-        }
-        Iterator<Map.Entry<String, JsonNode>> fields =
-                evidenceNode.properties().iterator();
-        while (fields.hasNext()) {
-            Map.Entry<String, JsonNode> field = fields.next();
-            if (!field.getValue().isTextual()) {
-                throw new IOException("event evidence values must be strings");
-            }
-            evidence.put(field.getKey(), field.getValue().textValue());
-        }
-        try {
-            return new TraceEvent(
-                    requiredLong(object, "sequence"),
-                    Kind.valueOf(requiredText(object, "kind")),
-                    requiredText(object, "sessionId"),
-                    nullableText(object.get("requestId")),
-                    requiredLong(object, "logicalTime"),
-                    nullableLong(object.get("frame")),
-                    nullableLong(object.get("revision")),
-                    nullableLong(object.get("parentSequence")),
-                    evidence);
-        } catch (IllegalArgumentException | NullPointerException exception) {
-            throw new IOException("invalid event fields", exception);
-        }
-    }
-
-    private static JsonNode required(JsonNode object, String name) throws IOException {
-        JsonNode value = object.get(name);
-        if (value == null || value.isNull()) {
-            throw new IOException("event is missing " + name);
-        }
-        return value;
-    }
-
-    private static String requiredText(JsonNode object, String name) throws IOException {
-        JsonNode value = required(object, name);
-        if (!value.isTextual()) {
-            throw new IOException("event " + name + " must be a string");
-        }
-        return value.textValue();
-    }
-
-    private static long requiredLong(JsonNode object, String name) throws IOException {
-        JsonNode value = required(object, name);
-        if (!value.isIntegralNumber()) {
-            throw new IOException("event " + name + " must be an integer");
-        }
-        return value.longValue();
-    }
-
-    private static String nullableText(JsonNode value) throws IOException {
-        if (value == null || value.isNull()) {
-            return null;
-        }
-        if (!value.isTextual()) {
-            throw new IOException("event text field must be a string or null");
-        }
-        return value.textValue();
-    }
-
-    private static Long nullableLong(JsonNode value) throws IOException {
-        if (value == null || value.isNull()) {
-            return null;
-        }
-        if (!value.isIntegralNumber()) {
-            throw new IOException("event numeric field must be an integer or null");
-        }
-        return value.longValue();
-    }
-
-    private static void putNullable(ObjectNode object, String name, Long value) {
-        if (value == null) {
-            object.putNull(name);
-        } else {
-            object.put(name, value);
-        }
+    static TraceEvent fromJson(byte[] json) throws IOException {
+        return TraceJson.decodeEvent(json);
     }
 
     private static Map<String, String> copyEvidence(Map<String, String> source) {
@@ -216,7 +115,7 @@ public record TraceEvent(
         Map<String, String> copy = new LinkedHashMap<>();
         source.forEach((key, value) -> copy.put(
                 requireText(key, "evidence key"), requireText(value, "evidence value")));
-        return Map.copyOf(copy);
+        return java.util.Collections.unmodifiableMap(copy);
     }
 
     private static String requireText(String value, String name) {
